---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 09. 09. 2025
  Optimizations:
    - Improved upgrade processing performance by batching multiple attempts into single operations,
      significantly reducing computational overhead in late game factories with many entities
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 08. 09. 2025
  Modding:
    - Added compatability module for the Solar Productivity mod. Solar panels should continue to be
      tracked after productivity research is finished, as long as players keep Solar Productivity's
      "Update interval (s)" map settng to 60 seconds or less (default is 5 seconds).
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 07. 09. 2025
  Bugfixes:
    - Fixed an error when attempting to upgrade entities that had no corresponding placeable items
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 06. 09. 2025
  Bugfixes:
    - Fixed module upgrades being missed for beacons, labs, and mining drills in Uncommon mode.
    - Fixed an error that occured when entities became invalid during batch processing
    - Fixed a crash when loading a save with modded entities that had mismatched prototype names
    - Fixed notifications showing the old quality level when entities were marked for upgrade in
      Uncommon difficutly mode.
  Modding:
    - Improved compatibility with mods that use different entity and item naming conventions
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 29. 08. 2025
  Features:
    - Added difficulty modes Normal and Uncommon.
      Normal mode is the existing version of the mod (with free upgrades)