@@ -36,6 +36,7 @@ enable-poles=Poles
 enable-power-switches=Power Switches
 enable-radar=Radar
 radar-growth-level-limit=Radar Growth Level Limit
+lightning-attractor-growth-level-limit=Lightning Attractor Growth Level Limit
 enable-reactors=Reactors
 enable-roboports=Roboports
 enable-solar-panels=Solar Panels
@@ -74,7 +75,8 @@ enable-mining-drills=Enable quality changes for all mining drills.
 enable-poles=Enable quality changes for all electric poles (including big power poles and substations).
 enable-power-switches=Enable quality changes for power switches.
 enable-radar=Enable quality changes for radar stations.
-radar-growth-level-limit=Limits radar quality growth to prevent excessive map exploration and save file bloat.\n\nRadars with higher quality can cause very large save files (1,200mb+) due to excessive map exploration.\n\n[color=green]Default: level 5 (legendary)[/color]\n[color=yellow]Range: 1-255 quality levels[/color]\n\nRadars will stop upgrading once they reach this quality level, preventing runaway map exploration while still allowing reasonable quality improvements.
+radar-growth-level-limit=Limits radar quality growth in order to prevent excessive map exploration and save file bloat.\n\nRadars with very high quality levels can cause large save files (1,200mb+) due to excessive map exploration.\n\n[color=green]Default: level 5 (legendary)[/color]\n[color=yellow]Range: 1-255 quality levels[/color]
+lightning-attractor-growth-level-limit=Limits lightning attractor quality growth to prevent performance issues.\n\nLightning attractors with very high quality levels have significantly increased coverage areas, which can cause lag spikes at night on Fulgora.\n\n[color=green]Default: level 5 (legendary)[/color]\n[color=yellow]Range: 1-255 quality levels[/color]
 enable-reactors=Enable quality changes for nuclear reactors.
 enable-roboports=Enable quality changes for roboports.
 enable-solar-panels=Enable quality changes for solar panels.
